# actix-rest-api

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/config/: config.rs
src/container/: container.rs
src/dao/: user.rs
src/domain/: error.rs  mod.rs  user.rs
src/interactor/: mod.rs  user_interactor.rs
src/port/: mod.rs  user_port.rs
src/presenter/: error.rs  health_check_presenter.rs  mod.rs  user_presenter.rs
src/repository/: user_repository.rs
src/router/: router.rs
src/usecase/: user_usecase.rs
