[package]
name = "actix-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-rt = "1.0"
actix-http = "1.0.1"
log = "0.4.0"
env_logger = "0.7.1"
failure = "0.1.6"
serde = "1.0.104"
serde_json = "1.0"
async-trait = "0.1.22"
awc = "1.0.1"
sea-orm = { version = "0.9.3", features = ["sqlx-mysql", "runtime-async-std-rustls", "macros" ] }
async-std = { version = "1", features = ["attributes"] }
envy = "0.4"
