[package]
name = "actix-rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-actix-rustls", "macros"] }
envy = "0.4"
