[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }
# sea-orm-cli 0.12 depends on regex without its `std` feature and fails to
# compile standalone; depending on regex here re-enables `std` via feature unification.
regex = "1"

[dependencies.sea-orm-migration]
version = "^0.12"
features = [
  "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
  "sqlx-mysql",           # `DATABASE_DRIVER` feature
]
